--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi>=0.68.0,<0.69.0
-uvicorn[standard]>=0.15.0,<0.16.0
-gunicorn>=20.1.0,<21.0.0
-torch>=2.5.0
-torchvision>=0.16.0
-opencv-python-headless>=4.5.0,<5.0.0
-numpy>=1.26.0,<2.0.0
-python-multipart>=0.0.5,<0.1.0
-Pillow>=10.0.0,<11.0.0
+fastapi==0.68.0
+uvicorn[standard]==0.15.0
+gunicorn==20.1.0
+torch==2.0.1+cpu --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.15.2+cpu --index-url https://download.pytorch.org/whl/cpu
+opencv-python-headless==4.7.0.72
+numpy==1.26.0
+python-multipart==0.0.6
+Pillow==10.0.0
