--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,93 @@
-fastapi==0.68.0
-uvicorn[standard]==0.15.0
-gunicorn==20.1.0
-torch==2.5.0 --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.22.1 --index-url https://download.pytorch.org/whl/cpu
-opencv-python-headless==4.7.0.72
-numpy==1.26.0
-python-multipart==0.0.6
-Pillow==10.0.0
+fastapi==0.110.1
+uvicorn==0.29.0
+python-multipart==0.0.9
+numpy>=1.24.0
+opencv-python-headless>=4.8.0
+torch>=2.0.0
+torchvision>=0.15.0
+python-dotenv>=1.0.0
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.2
+cvzone==1.6.1
+cycler==0.12.1
+exceptiongroup==1.3.0
+fastapi==0.116.1
+filelock==3.13.1
+Flask==3.1.1
+flask-cors==6.0.1
+fonttools==4.59.0
+frozenlist==1.7.0
+fsspec==2024.6.1
+gitdb==4.0.12
+GitPython==3.1.45
+grpclib==0.4.8
+gunicorn==23.0.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+idna==3.10
+imutils==0.5.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+modal==1.1.0
+mpmath==1.3.0
+multidict==6.6.3
+networkx==3.3
+numpy==2.2.6
+opencv-contrib-python==4.12.0.88
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+propcache==0.3.2
+protobuf==6.31.1
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+rich==14.1.0
+scikit-learn==1.7.1
+scipy==1.15.3
+seaborn==0.13.2
+shellingham==1.5.4
+sigtools==4.0.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.47.2
+sympy==1.13.3
+synchronicity==0.10.1
+threadpoolctl==3.6.0
+toml==0.10.2
+torch==2.7.1+cpu
+torchaudio==2.7.1+cpu
+torchvision==0.22.1+cpu
+tqdm==4.67.1
+typer==0.16.0
+types-certifi==2021.10.8.3
+types-toml==0.10.8.20240310
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+ultralytics==8.3.169
+ultralytics-thop==2.0.14
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+Werkzeug==3.1.3
+yarl==1.20.1
